k8s/ingress-appointment.yaml
# ingress-appointment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointment-ingress
  namespace: appointments
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /appointment
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 80
