k8s/ingress-patient.yaml
# ingress-patient.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-ingress
  namespace: patient
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /patient
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 80
